--- a/.github/workflows/market-close.yml
+++ b/.github/workflows/market-close.yml
@@ -47,8 +47,21 @@ jobs:
             echo "Correlation calculator not found, skipping"
           fi
 
+      - name: Check database has events
+        id: check_events
+        run: |
+          EVENT_COUNT=$(sqlite3 ai_pulse.db "SELECT COUNT(*) FROM events WHERE significance_score IS NOT NULL;" 2>/dev/null || echo "0")
+          echo "Event count: $EVENT_COUNT"
+          if [ "$EVENT_COUNT" -gt 0 ]; then
+            echo "has_events=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_events=false" >> $GITHUB_OUTPUT
+            echo "WARNING: No analyzed events found - skipping briefing publish"
+          fi
+
       - name: Regenerate briefing with market data
-        run: python3 publish_briefing.py --days 1 --min-score 40
+        if: steps.check_events.outputs.has_events == 'true'
+        run: python3 publish_briefing.py --days 7 --min-score 0
 
       - name: Commit database to private repo
         run: |
@@ -60,6 +73,7 @@ jobs:
           git push || echo "Nothing to push"
 
       - name: Prepare briefings for public repo
+        if: steps.check_events.outputs.has_events == 'true'
         run: |
           mkdir -p output
           cp -r briefings output/
@@ -68,6 +82,7 @@ jobs:
           cp style.css output/
 
       - name: Push updated briefing to public repo
+        if: steps.check_events.outputs.has_events == 'true'
         uses: cpina/github-action-push-to-another-repository@main
         env:
           SSH_DEPLOY_KEY: ${{ secrets.BRIEFINGS_DEPLOY_KEY }}
