Document FMP_API_KEY in .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,8 @@ ANTHROPIC_API_KEY=sk-ant-your-key-here
 # Optional - Add as needed
 NEWS_API_KEY=your-newsapi-key
 TWITTER_API_KEY=your-twitter-key
-ALPHA_VANTAGE_API_KEY=your-alphavantage-key
+
+# Market data collection
+FMP_API_KEY=your-fmp-key                    # Financial Modeling Prep (primary for stocks/ETFs)
+ALPHA_VANTAGE_API_KEY=your-alphavantage-key # Fallback for stocks if FMP fails
+TWELVE_DATA_API_KEY=your-twelvedata-key     # Last resort fallback
