Document deploy-assets workflow and add decision tree for workflow selection
- Update deploy-assets.yml to include about.html and CNAME
- Add 'Manual Workflows' section to CLAUDE.md documenting deploy-assets.yml
- Add 'Which Workflow Should I Use?' decision tree
- Clarify when to use deploy-assets vs waiting for scheduled runs
- Prevent future incidents of suggesting wrong workflows

--- a/.github/workflows/deploy-assets.yml
+++ b/.github/workflows/deploy-assets.yml
@@ -17,8 +17,10 @@ jobs:
           mkdir -p output
           cp -r briefings output/ || echo "No briefings directory"
           cp index.html output/ || echo "No index.html"
+          cp about.html output/ || echo "No about.html"
           cp archive.html output/ || echo "No archive.html"
           cp style.css output/ || echo "No style.css"
+          cp CNAME output/ || echo "No CNAME"
           cp README_BRIEFINGS.md output/README.md || echo "No README_BRIEFINGS.md"
           echo "Files prepared for deployment"
           ls -la output/
