Prevent accidental database commits
Changed .gitignore to block ai_pulse.db from manual commits.

Why:
- Commit 698491d accidentally overwrote live database with stale local copy
- Lost 175 events from 2025-11-27 and 2025-11-28
- Only GitHub Actions should commit database (using git add -f)

Prevention:
- Local commits will now ignore ai_pulse.db
- Workflows continue using 'git add -f ai_pulse.db' (force add)
- Developers must git pull to get latest data, can't accidentally commit old version

--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,12 @@ dist/
 *.db
 cache/
 
-# Track the main database for GitHub Actions persistence
-!ai_pulse.db
-
 # But ignore test databases
 test*.db
+
+# Database: Ignore locally to prevent accidental commits
+# Only GitHub Actions should commit this with -f flag
+ai_pulse.db
 
 # Logs
 *.log
