Add 7-day database artifact retention to workflows
Saves database snapshot after each workflow run for easy recovery.

Recovery:
- Last 7 days: Download from GitHub Actions artifacts
- Older: Use git history

Storage: 21 snapshots × 2MB = ~42MB (within free tier)

Prevents need for complex git commands when recovering from mistakes.

--- a/.github/workflows/daily-collection.yml
+++ b/.github/workflows/daily-collection.yml
@@ -120,6 +120,14 @@ jobs:
           target-branch: main
           commit-message: 'Daily briefing ${{ github.run_id }}'
 
+      - name: Save database artifact
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: ai-pulse-db-daily-${{ github.run_id }}
+          path: ai_pulse.db
+          retention-days: 7
+
       - name: Log run summary
         run: |
           echo "## Daily Collection Summary" >> $GITHUB_STEP_SUMMARY
