--- a/.github/workflows/morning-collection.yml
+++ b/.github/workflows/morning-collection.yml
@@ -92,6 +92,14 @@ jobs:
             -H "Content-Type: application/json" \
             -d "{\"content\": $MESSAGE_JSON}"
 
+      - name: Save database artifact
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: ai-pulse-db-morning-${{ github.run_id }}
+          path: ai_pulse.db
+          retention-days: 7
+
       - name: Log run summary
         run: |
           echo "## Morning Collection Summary" >> $GITHUB_STEP_SUMMARY
